[gd_scene load_steps=3 format=3 uid="uid://de54x45giic45"]

[ext_resource type="Texture2D" uid="uid://b34ty3uuo78ux" path="res://assets/chest.png" id="1"]
[ext_resource type="Script" path="res://Chest.gd" id="2"]

[node name="Chest" type="Node2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")
centered = false
hframes = 3

[node name="ChestOpen" type="AudioStreamPlayer2D" parent="."]

[node name="ChestClose" type="AudioStreamPlayer2D" parent="."]

[node name="ChestSuccess" type="AudioStreamPlayer2D" parent="."]

[node name="Nabbed" type="AudioStreamPlayer2D" parent="."]
